added styling to containers

--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -32,4 +32,14 @@
 
 .contclr {
   background-color: #FDF0D1;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+
+.todostyle {
+  border-radius: 5% 5% / 5% 5%;
+  border: black;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
 }
