--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -11,7 +11,7 @@
 .fontstyle2 {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: bolder;
-  color:#AC7D88;
+  color:#eae5ff;
   text-shadow: 2px 2px 8px rgb(56, 12, 123);
 }
   
