--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -14,6 +14,12 @@
   color:#eae5ff;
   text-shadow: 2px 2px 8px rgb(56, 12, 123);
 }
+
+.button {
+  height: 2rem;
+  width: 1rem;
+  border-radius: 12px;
+}
   
 .navbar {
   background-color: #85586F;
@@ -44,8 +50,13 @@
   text-align: center;
 }
 
+.shadow {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+
 .contclr2 {
-  max-height: 15rem;
+  max-height: 21rem;
 }
 
 .todostyle {
